--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,6 +5,10 @@ on:
     branches: 
       - 'master'
 
+permissions:
+  security-events: write
+  checks: write
+
 jobs:
   frontend-versioning:
     runs-on: ubuntu-latest
@@ -509,11 +513,30 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  golangci-lint-scan:
+    runs-on: ubuntu-latest
+
+    needs: [ codeql-scan, gitleaks-scan ]
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
+
+      - name: Scan with Golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.64
+
   frontend-e2e-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: [codeql-scan, gitleaks-scan]
+    needs: golangci-lint-scan
 
     steps:
       - uses: actions/checkout@v4
@@ -573,7 +596,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: [codeql-scan, gitleaks-scan]
+    needs: golangci-lint-scan
 
     steps:
       - uses: actions/checkout@v4
