--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -538,16 +538,20 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+#      - name: Set up Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: 18
 
       - name: Install Dependencies
-        run: npm install
+        run: |
+          cd frontend
+          npm install
 
       - name: Run ESLint
-        run: npx eslint . --ext .ts,.tsx
+        run: |
+          cd frontend
+          npx eslint .
 
   frontend-e2e-tests:
     timeout-minutes: 60
