do-10 test eslint scan 2

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -548,6 +548,9 @@ jobs:
           cd frontend
           npm install
 
+      - name: list file
+        run: ls
+
       - name: Run ESLint
         run: npx eslint . --ext .ts,.tsx
 
