do-10 test eslint scan 4

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -551,7 +551,7 @@ jobs:
       - name: Run ESLint
         run: |
           cd frontend
-          npx eslint . --ext .ts,.tsx
+          npx eslint .
 
   frontend-e2e-tests:
     timeout-minutes: 60
