--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -529,7 +529,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  eslint-scan:
+  frontend-eslint-scan:
     runs-on: ubuntu-latest
 
     needs: [codeql-scan, gitleaks-scan]
@@ -548,6 +548,15 @@ jobs:
           cd frontend
           npx eslint .
 
+  backend-eslint-scan:
+    runs-on: ubuntu-latest
+
+    needs: [codeql-scan, gitleaks-scan]
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
       - name: Install Backend Dependencies
         run: |
           cd backend
@@ -556,13 +565,13 @@ jobs:
       - name: Run ESLint
         run: |
           cd backend
-          npx eslint .
+          npx eslint src
 
   frontend-e2e-tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: eslint-scan
+    needs: frontend-eslint-scan
 
     steps:
       - uses: actions/checkout@v4
@@ -622,7 +631,7 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
 
-    needs: eslint-scan
+    needs: frontend-eslint-scan
 
     steps:
       - uses: actions/checkout@v4
