--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,4 +1,4 @@
-name: versioning, unit tests, build, image scan, code scan, linting and ui tests
+name: versioning, unit/integration tests, build, image scans, code scans, linting and ui tests
 
 on:
   push:
@@ -117,7 +117,7 @@ jobs:
           cd backend
           npm run test
 
-  backend-e2e-tests:
+  backend-integration-tests:
     runs-on: ubuntu-latest
 
     needs: backend-versioning
@@ -254,7 +254,7 @@ jobs:
 
     needs:
       - backend-unit-tests
-      - backend-e2e-tests
+      - backend-integration-tests
 
     steps:
       - name: Checkout master
