--- a/.github/workflows/_develop.yml
+++ b/.github/workflows/_develop.yml
@@ -18,96 +18,15 @@ jobs:
     needs: versioning
     secrets: inherit
 
-  frontend-build:
-    runs-on: ubuntu-latest
-
+  build:
+    uses: ./.github/workflows/build.yml
     needs: tests
-
-    steps:
-      - name: Checkout master
-        uses: actions/checkout@v4
-
-      - name: Download PACKAGE_VERSION_FRONTEND Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: PACKAGE_VERSION_FRONTEND
-          path: .
-
-      - name: Read PACKAGE_VERSION_FRONTEND
-        id: read_package_version
-        run: |
-          PACKAGE_VERSION_FRONTEND=$(cat PACKAGE_VERSION_FRONTEND)
-          echo "PACKAGE_VERSION_FRONTEND=$PACKAGE_VERSION_FRONTEND" >> $GITHUB_ENV
-
-      - name: Build container image
-        run: docker build --no-cache -t registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }} -f deployment/frontend.Dockerfile .
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 1200
-
-      - name: Push image to DigitalOcean Container Registry
-        run: docker push registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION_FRONTEND }}
-
-      - name: Set CURRENT_IAT_FRONTEND_SERVICE_VERSION in GitHub Repository Variables
-        run: |
-          curl -X PATCH \
-            -H "Authorization: Bearer ${{ secrets.VARIABLE_GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github+json" \
-            -d '{"name": "CURRENT_IAT_FRONTEND_SERVICE_VERSION", "value": "${{ env.PACKAGE_VERSION_FRONTEND }}"}' \
-            https://api.github.com/repos/${{ github.repository }}/actions/variables/CURRENT_IAT_FRONTEND_SERVICE_VERSION
-
-  backend-build:
-    runs-on: ubuntu-latest
-
-    needs: tests
-
-    steps:
-      - name: Checkout master
-        uses: actions/checkout@v4
-
-      - name: Download PACKAGE_VERSION_BACKEND Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: PACKAGE_VERSION_BACKEND
-          path: .
-
-      - name: Read PACKAGE_VERSION_BACKEND
-        id: read_package_version
-        run: |
-          PACKAGE_VERSION_BACKEND=$(cat PACKAGE_VERSION_BACKEND)
-          echo "PACKAGE_VERSION_BACKEND=$PACKAGE_VERSION_BACKEND" >> $GITHUB_ENV
-
-      - name: Build container image
-        run: docker build --no-cache -t registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }} -f deployment/backend.Dockerfile .
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 1200
-
-      - name: Push image to DigitalOcean Container Registry
-        run: docker push registry.digitalocean.com/kephalosk/nestjs-backend:${{ env.PACKAGE_VERSION_BACKEND }}
-
-      - name: Set CURRENT_IAT_BACKEND_SERVICE_VERSION in GitHub Repository Variables
-        run: |
-          curl -X PATCH \
-            -H "Authorization: Bearer ${{ secrets.VARIABLE_GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github+json" \
-            -d '{"name": "CURRENT_IAT_BACKEND_SERVICE_VERSION", "value": "${{ env.PACKAGE_VERSION_BACKEND }}"}' \
-            https://api.github.com/repos/${{ github.repository }}/actions/variables/CURRENT_IAT_BACKEND_SERVICE_VERSION
+    secrets: inherit
 
   frontend-trivy-scan:
     runs-on: ubuntu-latest
 
-    needs: frontend-build
+    needs: build
 
     continue-on-error: true
 
@@ -151,7 +70,7 @@ jobs:
   frontend-grype-scan:
     runs-on: ubuntu-latest
 
-    needs: frontend-build
+    needs: build
 
     continue-on-error: true
 
@@ -205,7 +124,7 @@ jobs:
   backend-trivy-scan:
     runs-on: ubuntu-latest
 
-    needs: backend-build
+    needs: build
 
     continue-on-error: true
 
@@ -249,7 +168,7 @@ jobs:
   backend-grype-scan:
     runs-on: ubuntu-latest
 
-    needs: backend-build
+    needs: build
 
     continue-on-error: true
 
