do-10 final test notification via smtp

--- a/.github/workflows/_develop.yml
+++ b/.github/workflows/_develop.yml
@@ -486,7 +486,6 @@ jobs:
 #      - frontend-gui-tests
 #      - frontend-e2e-tests
 #    if: needs.frontend-gui-tests.result == 'success' && needs.frontend-e2e-tests.result == 'success'
-    #${{ secrets.EMAIL_FROM }}
 
     steps:
       - name: Send Email via SendGrid
@@ -496,7 +495,7 @@ jobs:
           server_port: 587
           username: apikey
           password: ${{ secrets.SENDGRID_API_KEY }}
-          from: "kephalosk <noreply@em9676.philippkraatz.com>"
+          from: ${{ secrets.EMAIL_FROM }}
           to: ${{ secrets.EMAIL_TO }}
           subject: "CI/CD develop - Success - philippkraatz.com - Notification"
           body: |
@@ -505,5 +504,5 @@ jobs:
             Commit: ${{ github.event.head_commit.message }}
             Autor: ${{ github.event.head_commit.author.name }}
 
-            🎯 Repository: [${{ github.repository }}](https://github.com/${{ github.repository }})
-            🚀 Action Logs: [Hier ansehen](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            Repository: github.com/kephalosk/personal-finance-app
+            Action Logs: github.com/kephalosk/personal-finance-app/actions
