do-10 refactor workflow structure
do-10 refactor workflow structure 26

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,9 @@ jobs:
   frontend-unit:
     runs-on: ubuntu-latest
 
+    outputs:
+      result: ${{ job.status }}
+
     steps:
       - name: Checkout master
         uses: actions/checkout@v4
@@ -23,6 +26,9 @@ jobs:
   backend-unit:
     runs-on: ubuntu-latest
 
+    outputs:
+      result: ${{ job.status }}
+
     steps:
       - name: Checkout master
         uses: actions/checkout@v4
@@ -39,6 +45,9 @@ jobs:
 
   backend-integration:
     runs-on: ubuntu-latest
+
+    outputs:
+      result: ${{ job.status }}
 
     steps:
       - name: Checkout master
